<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="add">Add</string>
    <string name="add_a_link">Add a link</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="add_memory_to_bin">Add memory to bin</string>
    <string name="add_to_bin">Add to bin</string>
    <string name="add_to_bin_message">Are you sure you want to add this to recycle bin?</string>
    <string name="app_name">Jar Of Happiness</string>
    <string name="at_the_rate_memory"><html>&#64;Memory</html></string>
    <string name="back">Back</string>
    <string name="bin">Bin</string>
    <string name="change_gmail">Change Gmail</string>
    <string name="change_gmail_message">Are you sure you want to change your gmail?</string>
    <string name="change_theme">Change Theme</string>
    <string name="close">Close</string>
    <string name="current_password">Current Password</string>
    <string name="current_pin">Current PIN</string>
    <string name="delete_from_bin">Delete from bin</string>
    <string name="delete_from_bin_message">Are you sure you want to permanently delete these
        memories from recycle bin?</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="delete_my_account_message">Are you sure you want to delete your account?</string>
    <string name="download_memory_message">Download memory as an image (.png)</string>
    <string name="edit_memory">Edit memory</string>
    <string name="empty">Empty list</string>
    <string name="external_links">External Links</string>
    <string name="filter">Filter</string>
    <string name="filters_for_view">Filters for view</string>
    <string name="goto_menu">Goto Menu</string>
    <string name="hash"><b>#</b></string>
    <string name="in_bin">In bin</string>
    <string name="in_memories">In Memories</string>
    <string name="laugh">Laugh</string>
    <string name="link">Link</string>
    <string name="location">Location</string>
    <string name="location_hint">Eg: Home, Cafe Coffee Day, etc.</string>
    <string name="lock">Lock</string>
    <string name="lock_memories">Lock Memories</string>
    <string name="lock_password">Lock Password</string>
    <string name="locked">Locked</string>
    <string name="locked_memories">Locked Memories</string>
    <string name="lock_the_memory">Lock the memory</string>
    <string name="lol">LOL</string>
    <string name="love">Love</string>
    <string name="memory">Memory</string>
    <string name="mood">Mood</string>
    <string name="my_account">My Account</string>
    <string name="new_link">New Link</string>
    <string name="new_password">New Password</string>
    <string name="new_pin">New PIN</string>
    <string name="new_tag">New Tag</string>
    <string name="no">No</string>
    <string name="no_title">&lt;No title&gt;</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="open_date_picker">Open datepicker</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password *******</string>
    <string name="password_hint_2">********</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="pin">PIN</string>
    <string name="random_memory_message">Get another random memory</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="reenter_pin">Re-enter PIN</string>
    <string name="remove_link">Remove this link</string>
    <string name="remove_keyword">Remove this keyword</string>
    <string name="remove_tag">Remove this tag</string>
    <string name="restore_memories">Restore memories</string>
    <string name="restore_memories_message">Are you sure you want to restore these memories?</string>
    <string name="save">Save</string>
    <string name="save_a_memory">Save a memory</string>
    <string name="save_changes">Save changes</string>
    <string name="search">Search</string>
    <string name="search_by">Search By</string>
    <string name="search_in">Search In</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="set_password">Set Password</string>
    <string name="settings">Settings</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="title">Title</string>
    <string name="tongue_out">Wink</string>
    <string name="unlocked_memories">Unlocked Memories</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="view_by">View By</string>
    <string name="when">When</string>
    <string name="when_hint">Eg: In class 10, dd-MM-yyyy, etc.</string>
    <string name="wink">Wink</string>
    <string name="yes">Yes</string>
</resources>